@@ -18,6 +18,9 @@ import org.wordpress.android.modules.UI_THREAD
 import org.wordpress.android.ui.sitecreation.misc.SiteCreationErrorType.INTERNET_UNAVAILABLE_ERROR
 import org.wordpress.android.ui.sitecreation.misc.SiteCreationErrorType.UNKNOWN
 import org.wordpress.android.ui.sitecreation.misc.SiteCreationTracker
+import org.wordpress.android.ui.sitecreation.theme.PreviewMode.MOBILE
+import org.wordpress.android.ui.sitecreation.theme.PreviewMode.TABLET
+import org.wordpress.android.ui.sitecreation.theme.PreviewMode.valueOf
 import org.wordpress.android.ui.sitecreation.usecases.FetchHomePageLayoutsUseCase
 import org.wordpress.android.util.NetworkUtilsWrapper
 import org.wordpress.android.viewmodel.SingleLiveEvent
@@ -30,6 +33,7 @@ const val defaultTemplateSlug = "default"
 private const val ERROR_CONTEXT = "design"
 private const val FETCHED_LAYOUTS = "FETCHED_LAYOUTS"
 private const val SELECTED_LAYOUT = "SELECTED_LAYOUT"
+private const val PREVIEW_MODE = "PREVIEW_MODE"
 
 class HomePagePickerViewModel @Inject constructor(
     private val networkUtils: NetworkUtilsWrapper,
@@ -60,6 +64,12 @@ class HomePagePickerViewModel @Inject constructor(
     private val _onBackButtonPressed = SingleLiveEvent<Unit>()
     val onBackButtonPressed: LiveData<Unit> = _onBackButtonPressed
 
+    private val _onThumbnailModeButtonPressed = SingleLiveEvent<PreviewMode>()
+    val onThumbnailModeButtonPressed: LiveData<PreviewMode> = _onThumbnailModeButtonPressed
+
+    private val _thumbnailMode = SingleLiveEvent<PreviewMode>()
+    val thumbnailMode: LiveData<PreviewMode> = _thumbnailMode
+
     sealed class DesignSelectionAction(val template: String, val segmentId: Long?) {
         object Skip : DesignSelectionAction(defaultTemplateSlug, null)
         class Choose(template: String, segmentId: Long?) : DesignSelectionAction(template, segmentId)
@@ -80,7 +90,10 @@ class HomePagePickerViewModel @Inject constructor(
         dispatcher.unregister(fetchHomePageLayoutsUseCase)
     }
 
-    fun start() {
+    fun start(isTablet: Boolean = false) {
+        if (_thumbnailMode.value == null) {
+            _thumbnailMode.value = if (isTablet) TABLET else MOBILE
+        }
         if (uiState.value !is UiState.Content) {
             analyticsTracker.trackSiteDesignViewed()
             fetchLayouts()
@@ -110,7 +123,11 @@ class HomePagePickerViewModel @Inject constructor(
                 LayoutGridItemUiState(
                         slug = it.slug!!,
                         title = it.title ?: "",
-                        preview = it.screenshot!!,
+                        preview = when (_thumbnailMode.value) {
+                            MOBILE -> it.mobileScreenshot!!
+                            TABLET -> it.tabletScreenshot!!
+                            else -> it.screenshot!!
+                        },
                         selected = it.slug == state.selectedLayoutSlug,
                         onItemTapped = { onLayoutTapped(layoutSlug = it.slug!!) },
                         onThumbnailReady = { onThumbnailReady(layoutSlug = it.slug!!) }
@@ -197,6 +214,10 @@ class HomePagePickerViewModel @Inject constructor(
         _onBackButtonPressed.call()
     }
 
+    fun onThumbnailModePressed() {
+        _onThumbnailModeButtonPressed.value = _thumbnailMode.value
+    }
+
     fun onRetryClicked() {
         if (networkUtils.isNetworkAvailable()) {
             fetchLayouts()
@@ -210,6 +231,7 @@ class HomePagePickerViewModel @Inject constructor(
         if (savedInstanceState == null) return
         val layouts = savedInstanceState.getParcelableArrayList<StarterDesignModel>(FETCHED_LAYOUTS)
         val selected = savedInstanceState.getString(SELECTED_LAYOUT)
+        val previewMode = savedInstanceState.getString(PREVIEW_MODE, MOBILE.name)
         if (layouts == null || layouts.isEmpty()) {
             fetchLayouts()
             return
@@ -217,6 +239,7 @@ class HomePagePickerViewModel @Inject constructor(
         val state = uiState.value as? UiState.Content ?: UiState.Content()
         updateUiState(state.copy(selectedLayoutSlug = selected))
         this.layouts = layouts
+        _thumbnailMode.value = valueOf(previewMode)
         loadLayouts()
     }
 
@@ -224,6 +247,7 @@ class HomePagePickerViewModel @Inject constructor(
         (uiState.value as? UiState.Content)?.let {
             outState.putParcelableArrayList(FETCHED_LAYOUTS, ArrayList(layouts))
             outState.putString(SELECTED_LAYOUT, it.selectedLayoutSlug)
+            outState.putString(PREVIEW_MODE, _thumbnailMode.value?.name ?: MOBILE.name)
         }
     }
 
@@ -243,6 +267,13 @@ class HomePagePickerViewModel @Inject constructor(
             } else {
                 updateUiState(state.copy(selectedLayoutSlug = layoutSlug, isToolbarVisible = true))
             }
+            loadLayouts()
+        }
+    }
+
+    fun onThumbnailModeChanged(mode: PreviewMode) {
+        if (_thumbnailMode.value !== mode) {
+            _thumbnailMode.value = mode
             loadLayouts()
         }
     }
