@@ -1,0 +1,10 @@
+package org.wordpress.android.ui.sitecreation.theme
+
+/**
+ * Holds the available preview/thumbnail modes
+ */
+enum class PreviewMode {
+    MOBILE,
+    TABLET,
+    DESKTOP
+}
