@@ -22,6 +22,16 @@
         android:paddingEnd="0dp"
         android:text="@string/hpp_title" />
 
+    <ImageButton
+        android:id="@+id/previewTypeSelectorButton"
+        style="@style/WebPreviewNavbarButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="0"
+        android:contentDescription="@string/preview_type_desc"
+        android:src="@drawable/ic_devices_white_24dp" />
+
     <Button
         android:id="@+id/skipButton"
         style="@style/HomePagePickerSkipButton"
