@@ -2940,6 +2940,8 @@
 
     <!-- Web Preview -->
     <string name="web_preview_default">Default</string>
+    <string name="web_preview_mobile">Mobile</string>
+    <string name="web_preview_tablet">Tablet</string>
     <string name="web_preview_desktop">Desktop</string>
 
     <string name="create_post_page_fab_tooltip">Create a post or page</string>
